# MLOPS-MM01-HM

./: .gitignore  .pre-commit-config.yaml  Dockerfile  app.py  inference.py  main.py  pyproject.toml
api/models/: iris.py  sentiment.py
config/: .env.dev  .env.prod  .env.test
tests/: test_app.py
